<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/background1"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/round_rectangle"
            android:scrollbarSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search"
            app:srcCompat="@drawable/round_rectangle" />

        <ImageView
            android:id="@+id/background2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background1"
            app:srcCompat="@drawable/round_rectangle" />

        <ImageView
            android:id="@+id/background3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background2"
            app:srcCompat="@drawable/round_rectangle" />

        <ImageView
            android:id="@+id/btn_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/profile" />

        <ImageView
            android:id="@+id/btn_notification"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_setting"
            app:layout_constraintEnd_toStartOf="@+id/btn_setting"
            app:layout_constraintTop_toTopOf="@+id/btn_setting"
            app:srcCompat="@mipmap/alarm" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cold" />


        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_side"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="30sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/btn_notification"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_notification" />

        <TextView
            android:id="@+id/tv_cold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/fridge"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background1" />


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="0dp"
            android:layout_height="198dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout_gridtableLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <GridView
                        android:id="@+id/field_cold"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="0dp"
                        android:columnWidth="70dp"
                        android:gravity="left"
                        android:horizontalSpacing="10dp"
                        android:numColumns="auto_fit"
                        android:scrollbarAlwaysDrawHorizontalTrack="false"
                        android:scrollbarAlwaysDrawVerticalTrack="false"
                        android:scrollbars="none"
                        android:stretchMode="none"
                        android:verticalSpacing="1dp">

                    </GridView>
                </LinearLayout>
            </FrameLayout>
        </HorizontalScrollView>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_warm" />

        <TextView
            android:id="@+id/tv_warm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/roomtemp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background2" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout_gridtableLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <GridView
                        android:id="@+id/field_warm"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="0dp"
                        android:columnWidth="70dp"
                        android:gravity="left"
                        android:horizontalSpacing="10dp"
                        android:numColumns="1000"
                        android:scrollbarAlwaysDrawHorizontalTrack="false"
                        android:scrollbarAlwaysDrawVerticalTrack="false"
                        android:scrollbars="none"
                        android:stretchMode="none"
                        android:verticalSpacing="1dp">

                    </GridView>
                </LinearLayout>
            </FrameLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_freeze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/freezer"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background3" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_freeze" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout_gridtableLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <GridView
                        android:id="@+id/field_freeze"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="0dp"
                        android:columnWidth="70dp"
                        android:gravity="left"
                        android:horizontalSpacing="10dp"
                        android:numColumns="auto_fit"
                        android:scrollbarAlwaysDrawHorizontalTrack="false"
                        android:scrollbarAlwaysDrawVerticalTrack="false"
                        android:scrollbars="none"
                        android:stretchMode="none"
                        android:verticalSpacing="3dp"></GridView>
                </LinearLayout>
            </FrameLayout>
        </HorizontalScrollView>

<!--        <GridView
            android:id="@+id/field_freeze"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:numColumns="4"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"></GridView>-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/fridge" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_bar"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/fab_main"
            app:layout_constraintEnd_toStartOf="@+id/fab_main"
            app:layout_constraintTop_toTopOf="@+id/fab_main"
            app:srcCompat="@mipmap/add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_sort"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/fab_main"
            app:layout_constraintStart_toEndOf="@+id/fab_main"
            app:layout_constraintTop_toTopOf="@+id/fab_main"
            app:srcCompat="@mipmap/sort_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>